--- a/src/jugadors.html
+++ b/src/jugadors.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
-    <title>Portada</title>
+    <title>Jugadors</title>
   </head>
   <body>
     <include src="./views/header.html"></include>
