afegida la quarta pagina

--- a/src/siciliana.html
+++ b/src/siciliana.html
@@ -33,10 +33,12 @@
         <p>
             Eventually the c-pawn of black is usually exchanged, opening the semi-open c file for black to bring his queen or rook to and add pressure to the queen side attack.
         </p>
-        <blockquote class="blockquote text-right">
-            <p class="mb-0">“Every chess master was once a beginner.”</p>
-            <footer class="blockquote-footer">Irving Chernev</footer>
-          </blockquote>
+        <div class="well">
+            <blockquote class="blockquote text-right">
+                <p class="mb-0">“Every chess master was once a beginner.”</p>
+                <footer class="blockquote-footer">Irving Chernev</footer>
+            </blockquote>
+        </div>
         <p>
             White not only has to worry about black’s defense but also the counter attack that the Sicilian Defense presents. White tends to have the advantage on the king side while black will usually look to attack on the queen side.
         </p>
