afegit accordion i continguts

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <include src="./views/header.html"></include>
-    <div class="portada-grid">
+    <div class="container portada-grid">
       <picture class="torneig-foto">
         <source srcset="./assets/images/escacs_fusta_portada.jpg?as=webp&width=800" type="image/webp" />
         <img src="./assets/images/escacs_fusta_portada.jpg" alt="Tauler d'escacs" class="img-fluid" />
@@ -19,7 +19,7 @@
         Juliol de 2023
       </p>
       <p class="torneig-presentacio">
-        El torneig més esperat de l'any ja ha arribat. Jugadors, prepareu-vos per les batalles més explosives en un tauler d'escacs.
+        El torneig més esperat de l'any ja ha arribat. Jugadors, prepareu-vos per les batalles més explosives.
       </p>
     </div>
     <include src="./views/footer.html"></include>
