--- a/src/jugadors.html
+++ b/src/jugadors.html
@@ -10,15 +10,15 @@
   <body>
     <include src="./views/header.html"></include>
     
-    <div class="card-columns">
+    <div class="container cartes">
 
       <div class="card text-center">
         <img class="card-img-top" src="assets/images/chessPlayerIcon.png" alt="Card image cap"> <!-- https://www.iconfinder.com/icons/5258943/board_boy_chess_game_player_icon-->
         <div class="card-body">
           <h5 class="card-title">Arnau</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Pare de família, ha jugat als escacs des de fa un any. Especialista en partides ràpides.</p>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">ELO: 1080</li>
+            <li class="list-group-item">ELO: 1200</li>
           </ul>
         </div>
       </div>
@@ -27,18 +27,18 @@
         <img class="card-img-top" src="assets/images/chessPlayerIcon.png" alt="Card image cap"> <!-- https://www.iconfinder.com/icons/5258943/board_boy_chess_game_player_icon-->
         <div class="card-body">
           <h5 class="card-title">Pol</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">El més avançat, més estudiós del joc i més expert. Juga un joc lent molt calculat i prudent.</p>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">ELO: 1080</li>        </div>
+            <li class="list-group-item">ELO: 1500</li>        </div>
       </div>
 
       <div class="card text-center">
         <img class="card-img-top" src="assets/images/chessPlayerIcon.png" alt="Card image cap"> <!-- https://www.iconfinder.com/icons/5258943/board_boy_chess_game_player_icon-->
         <div class="card-body">
           <h5 class="card-title">Jaume</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">En realitat no és jugador d'escacs. Ha jugat quatre parties per la pressió social.</p>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">ELO: 1080</li>
+            <li class="list-group-item">ELO: 1100</li>
         </div>
       </div>
 
@@ -46,9 +46,9 @@
         <img class="card-img-top" src="assets/images/chessPlayerIcon.png" alt="Card image cap"> <!-- https://www.iconfinder.com/icons/5258943/board_boy_chess_game_player_icon-->
         <div class="card-body">
           <h5 class="card-title">Marcel</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Jugador polivalent, amb domini de moltes sortides. Allarga innecessariament l'end game perquè li agrada fer patir als rivals.</p>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">ELO: 1080</li>
+            <li class="list-group-item">ELO: 1000</li>
         </div>
       </div>
 
@@ -56,9 +56,9 @@
         <img class="card-img-top" src="assets/images/chessPlayerIcon.png" alt="Card image cap"> <!-- https://www.iconfinder.com/icons/5258943/board_boy_chess_game_player_icon-->
         <div class="card-body">
           <h5 class="card-title">Joan</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Ell tampoc és jugador d'escacs, ben just en sap les normes. Si algun dia es desperta pot donar guerra.</p>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">ELO: 1080</li>
+            <li class="list-group-item">ELO: -</li>
         </div>
       </div>
 
@@ -66,9 +66,9 @@
         <img class="card-img-top" src="assets/images/chessPlayerIcon.png" alt="Card image cap"> <!-- https://www.iconfinder.com/icons/5258943/board_boy_chess_game_player_icon-->
         <div class="card-body">
           <h5 class="card-title">Marc</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Jugador compulsiu en estones mortes. Juga partides de 5 minuts com un boig. Molta intuició i molt perillós.</p>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">ELO: 1080</li>
+            <li class="list-group-item">ELO: 1300</li>
         </div>
       </div>
 
