--- a/src/puzzle.html
+++ b/src/puzzle.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <include src="./views/header.html"></include>
-    <div>
+    <div class="container">
         <h1>Omple el formulari per apuntar-te al torneig</h1>
         <h2>Molta sort!</h2>       
-        <form>
+        <form class="formulari">
             <div class="form-group">
                 <label for="nomParticipant">Nom</label>
                 <input type="email" class="form-control" id="nomParticipant" placeholder="">
@@ -39,13 +39,13 @@
                 <label for="minuts10">
                   <input type="checkbox" id="minuts10"> 10 minuts
                 </label>
-              </div>
-              <div class="checkbox">
+            </div>
+            <div class="checkbox">
                 <label for="minuts30">
                   <input type="checkbox" id="minuts30"> 30 minuts
                 </label>
-              </div>
-              <div class="form-group">
+            </div>
+            <div class="form-group">
                 <label for="elo">ELO:</label>
                 <select class="form-control" id="elo">
                   <option>600-1000</option>
