--- a/src/siciliana.html
+++ b/src/siciliana.html
@@ -14,19 +14,21 @@
         <div class="row">
             <div class="col">
                 <picture class="torneig-foto">
-                    <source srcset="./assets/images/sicilian-big.jpg?as=webp&width=400" type="image/webp" />
-                    <img src="./assets/images/sicilian-big.jpg" alt="Tauler d'escacs" class="img-fluid" /> <!-- https://www.thechesswebsite.com/sicilian-defense/#:~:text=The%20Sicilian%20Defense%20is%20the%20most%20popular%20defense,how%20well%20the%20Sicilian%20Defense%20plays%20against%201.e4.-->
+                    <source srcset="./assets/images/sicilian-big.jpg?as=webp&width=300" type="image/webp" />
+                    <img src="./assets/images/sicilian-big.jpg" alt="Tauler d'escacs" class="img-fluid" /> 
                 </picture>
             </div>
             <div class="col">
                 <p>
-                    La defensa siciliana, jugada per primera vegada l'any 1592 a Palermo, és una defensa per peces negres molt potent.
+                    La defensa siciliana, jugada per primera vegada l'any 1592 a Palermo, és una defensa per al jugador de peces negres.
+                </p>
+
+                <p>
+                    El fonament de la defensa és avançar el peó a la posició c5 com a resposta de l'obertura del peó a e4.
                 </p>
             </div>
         </div>
-        <p>
-            El fonament de la defensa és avançar el peó a la posició c5 com a resposta de l'obertura del peó a e4.
-        </p>
+
         <p>
             The Sicilian Defense is the most popular defense against white’s opening 1.e4 and is used extensively at top level play. It is a very aggressive defense and immediately stakes claim at the center, denying white the double pawns on e4 and d4. Many chess champions actually prefer to start with 1.d4 because of how well the Sicilian Defense plays against 1.e4.
         </p>
@@ -45,10 +47,82 @@
         <p>
             For those chess players that play against the 1.e4 opening quite often, the Sicilian Defense is an opening that you should spend quite a bit of time studying. There are many variations and they each are designed for specific types of players.
         </p>
-        <p>
-            Watch the video below to watch more detailed explanations of the opening, multiple variations, and extended lines.
-        </p>
-    </div>
+
+        <h2>Key Concepts</h2>
+        <ul>
+            <li><strong>Counterplay:</strong> The Sicilian Defense offers Black plenty of counterplay opportunities. Black should aim to challenge White's central pawn structure and generate active play on both wings.</li>
+            <li><strong>Pawn structure:</strong> Understanding the typical pawn structures in the Sicilian Defense is essential. Black should strive for a solid pawn formation while looking for opportunities to undermine White's pawn center.</li>
+            <li><strong>Piece activity:</strong> In the Sicilian Defense, piece activity is crucial. Black should aim to develop their pieces harmoniously and control key squares in the center and on the wings.</li>
+        </ul>
+
+        <h2>Main Variations</h2>
+
+        <div class="accordion" id="sicilianaVariacions">
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    Open Sicilian
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#sicilianaVariacions">
+                <div class="accordion-body accordion-foto">
+                    <p class="accordion-body__left-column">
+                        The Open Sicilian arises after 2.Nf3 and 3.d4, leading to an open position with chances for both sides. The most common Open Sicilian lines are the Najdorf Variation, the Scheveningen Variation, the Dragon Variation, and the Sveshnikov Variation.
+                    </p>
+                    <picture class="accordion-body__right-column">
+                        <source srcset="./assets/images/openSicilian.png?as=webp&width=200" type="image/webp" />
+                        <img src="./assets/images/openSicilian.png" alt="open sicilian" class="img-fluid" /> 
+                    </picture>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Closed Sicilian
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#sicilianaVariacions">
+                <div class="accordion-body">
+                    <p>
+                        The Closed Sicilian, characterized by the move 2.Nc3, is a slower and more positional approach. White aims for a kingside pawn expansion and attack, while Black looks for counterplay on the queenside.                </div>
+                    </p>
+                </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Alapin Variation
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#sicilianaVariacions">
+                <div class="accordion-body">
+                    <p>
+                        In the Alapin Variation, White plays 2.c3 to support the advance d2-d4. This variation leads to more symmetrical pawn structures and a slower, more strategic battle.
+                    </p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    Smith-Morra Gambit
+                  </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#sicilianaVariacions">
+                  <div class="accordion-body">
+                    <p>
+                        The Smith-Morra Gambit involves White sacrificing a pawn with 2.d4 cxd4 3.c3. White aims to gain rapid development and attacking chances in return for the pawn.
+                    </p>
+                </div>
+                </div>
+              </div>
+            </div>
+            <hr>
+            <p>Sicilian main picture from <a href="https://www.thechesswebsite.com/sicilian-defense/#:~:text=The%20Sicilian%20Defense%20is%20the%20most%20popular%20defense,how%20well%20the%20Sicilian%20Defense%20plays%20against%201.e4">here</a></p>
+            <p>The text on this page has been obtained from <a href="https://chessify.me/blog/sicilian-defense-chess-opening#:~:text=Some%20of%20the%20most%20popular%20Sicilian%20Defense%20variations,to%20support%20the%20advance%20d2-d4.%20...%20M%C3%A1s%20elementos">this website</a></p>
+            <p>Open Sicilian variation picture from <a href="https://i.redd.it/jqfrds1mhcfz.png">here</a></p>
+        </div>
     <include src="./views/footer.html"></include>
     <script type="module" src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
   </body>
