afegit boostrap components

--- a/src/jugadors.html
+++ b/src/jugadors.html
@@ -36,7 +36,7 @@
         <img class="card-img-top" src="assets/images/chessPlayerIcon.png" alt="Card image cap"> <!-- https://www.iconfinder.com/icons/5258943/board_boy_chess_game_player_icon-->
         <div class="card-body">
           <h5 class="card-title">Jaume</h5>
-          <p class="card-text">En realitat no és jugador d'escacs. Ha jugat quatre parties per la pressió social.</p>
+          <p class="card-text">En realitat no és jugador d'escacs. Ha jugat quatre parties i ho ha deixat.</p>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">ELO: 1100</li>
         </div>
@@ -66,9 +66,47 @@
         <img class="card-img-top" src="assets/images/chessPlayerIcon.png" alt="Card image cap"> <!-- https://www.iconfinder.com/icons/5258943/board_boy_chess_game_player_icon-->
         <div class="card-body">
           <h5 class="card-title">Marc</h5>
-          <p class="card-text">Jugador compulsiu en estones mortes. Juga partides de 5 minuts com un boig. Molta intuició i molt perillós.</p>
+          <p class="card-text">Jugador compulsiu en estones mortes del dia. Juga partides de 5 minuts com un boig. Juga amb molta intuició.</p>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">ELO: 1300</li>
+        </div>
+      </div>
+
+      <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+        Millors Jugadors del Mon
+      </button>
+      
+      <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasExampleLabel">Millors</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <div class="GMasters">
+            <p class="GM-name">
+              <span class="badge text-bg-danger">GM</span>Magnus Carlsen
+            </p>
+            <p class="GM-body">
+              To many, GM Magnus Carlsen is the best to ever play the game, although GMs Garry Kasparov and Bobby Fischer remain in the conversation. At any rate, the clear and remarkable point is that before turning 30 years old, Carlsen had already earned a spot at the top, and he has continued to dominate into...
+            </p>
+            <p class="GM-name">
+              <span class="badge text-bg-danger">GM</span>Ian Nepomniachtchi
+            </p>
+            <p class="GM-body">
+              GM Ian Nepomniachtchi (“Nepo” for short) is a Russian super grandmaster who has twice won the Candidates Tournament to play for the world championship. After winning the 2020-21 Candidates Tournament, he challenged GM Magnus Carlsen for the 2021 World Championship and lost in 11 games. Nepomniachtchi...
+            </p>
+            <p class="GM-name">
+              <span class="badge text-bg-danger">GM</span>Ding Liren
+            </p>
+            <p class="GM-body">
+              Ding Liren is the reigning FIDE World Chess Champion after defeating GM Ian Nepomniachtchi in the 2023 World Championship. Like most world champions, a combination of dominance and close calls have defined Ding's career leading up to winning the title. Ding won his first Chinese Chess Championship at...
+            </p>
+            <hr>
+            <p>
+              Informació de <a href="https://www.chess.com/players">chess.com</a>
+            </p>
+          </div>
+
         </div>
       </div>
 
