--- a/src/siciliana.html
+++ b/src/siciliana.html
@@ -55,7 +55,7 @@
             <li><strong>Piece activity:</strong> In the Sicilian Defense, piece activity is crucial. Black should aim to develop their pieces harmoniously and control key squares in the center and on the wings.</li>
         </ul>
 
-        <h2>Main Variations</h2>
+        <h2>Main Variations  <span class="badge text-bg-info rounded-pill">New</span></h2>
 
         <div class="accordion" id="sicilianaVariacions">
             <div class="accordion-item">
