--- a/src/puzzle.html
+++ b/src/puzzle.html
@@ -10,7 +10,7 @@
   <body>
     <include src="./views/header.html"></include>
     <div class="container">
-        <h1>Omple el formulari per apuntar-te al torneig</h1>
+        <h1>Omple el formulari per apuntar-te</h1>
         <h2>Molta sort!</h2>       
         <form class="formulari">
             <div class="form-group">
@@ -54,7 +54,7 @@
                   <option>>1800</option>
                 </select>
               </div>
-            <button type="submit" class="btn btn-default">Enviar</button>
+            <button type="submit" class="btn btn-primary">Enviar</button>
           </form>
     </div>
     <include src="./views/footer.html"></include>
