--- a/src/jugadors.html
+++ b/src/jugadors.html
@@ -19,6 +19,7 @@
           <p class="card-text">Pare de família, ha jugat als escacs des de fa un any. Especialista en partides ràpides.</p>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">ELO: 1200</li>
+            <li class="list-group-item">Edat: 29</li>
           </ul>
         </div>
       </div>
@@ -29,7 +30,10 @@
           <h5 class="card-title">Pol</h5>
           <p class="card-text">El més avançat, més estudiós del joc i més expert. Juga un joc lent molt calculat i prudent.</p>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">ELO: 1500</li>        </div>
+            <li class="list-group-item">ELO: 1500</li>       
+            <li class="list-group-item">Edat: 30</li>
+          </ul>
+        </div>
       </div>
 
       <div class="card text-center">
@@ -39,6 +43,7 @@
           <p class="card-text">En realitat no és jugador d'escacs. Ha jugat quatre parties i ho ha deixat.</p>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">ELO: 1100</li>
+            <li class="list-group-item">Edat: 30</li>
         </div>
       </div>
 
@@ -49,6 +54,7 @@
           <p class="card-text">Jugador polivalent, amb domini de moltes sortides. Allarga innecessariament l'end game perquè li agrada fer patir als rivals.</p>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">ELO: 1000</li>
+            <li class="list-group-item">Edat: 29</li>
         </div>
       </div>
 
@@ -59,6 +65,7 @@
           <p class="card-text">Ell tampoc és jugador d'escacs, ben just en sap les normes. Si algun dia es desperta pot donar guerra.</p>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">ELO: -</li>
+            <li class="list-group-item">Edat: 30</li>
         </div>
       </div>
 
@@ -69,21 +76,20 @@
           <p class="card-text">Jugador compulsiu en estones mortes del dia. Juga partides de 5 minuts com un boig. Juga amb molta intuició.</p>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">ELO: 1300</li>
+            <li class="list-group-item">Edat: 29</li>
         </div>
       </div>
     </div>
 
-    <div class="container container-center">
-      <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+    <div class="container text-center">
+      <button class="btn btn-danger" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasGM" aria-controls="offcanvasGM">
         Millors Jugadors del Mon
       </button>
     </div>
-
-
     
-    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasGM" aria-labelledby="offcanvas-millorsjugadors">
       <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasExampleLabel">Millors</h5>
+        <h5 class="offcanvas-title" id="offcanvas-millorsjugadors">Millors Jugadors</h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
       <div class="offcanvas-body">
