--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <include src="./views/header.html"></include>
-    <div class="container poster">
+    <div class="container poster text-center">
       <picture class="poster__foto">
         <source srcset="./assets/images/escacs_fusta_portada.jpg?as=webp&width=1080" type="image/webp" />
         <img src="./assets/images/escacs_fusta_portada.jpg" alt="Tauler d'escacs" class="img-fluid" />
