--- a/src/jugadors.html
+++ b/src/jugadors.html
@@ -113,7 +113,7 @@
             Ding Liren is the reigning FIDE World Chess Champion after defeating GM Ian Nepomniachtchi in the 2023 World Championship. Like most world champions, a combination of dominance and close calls have defined Ding's career leading up to winning the title. Ding won his first Chinese Chess Championship at...
           </p>
           <hr>
-          <p>
+          <p class="fonts">
             Informació de <a href="https://www.chess.com/players">chess.com</a>
           </p>
         </div>
