--- a/src/siciliana.html
+++ b/src/siciliana.html
@@ -19,20 +19,18 @@
                 </picture>
             </div>
             <div class="col">
-                <p>
+                <p class="text-article">
                     La defensa siciliana, jugada per primera vegada l'any 1592 a Palermo, és una defensa per al jugador de peces negres.
                 </p>
-
-                <p>
+                <p class="text-article">
                     El fonament de la defensa és avançar el peó a la posició c5 com a resposta de l'obertura del peó a e4.
                 </p>
             </div>
         </div>
-
-        <p>
+        <p class="text-article">
             The Sicilian Defense is the most popular defense against white’s opening 1.e4 and is used extensively at top level play. It is a very aggressive defense and immediately stakes claim at the center, denying white the double pawns on e4 and d4. Many chess champions actually prefer to start with 1.d4 because of how well the Sicilian Defense plays against 1.e4.
         </p>
-        <p>
+        <p class="text-article">
             Eventually the c-pawn of black is usually exchanged, opening the semi-open c file for black to bring his queen or rook to and add pressure to the queen side attack.
         </p>
         <div class="well">
@@ -41,13 +39,12 @@
                 <footer class="blockquote-footer">Irving Chernev</footer>
             </blockquote>
         </div>
-        <p>
+        <p class="text-article">
             White not only has to worry about black’s defense but also the counter attack that the Sicilian Defense presents. White tends to have the advantage on the king side while black will usually look to attack on the queen side.
         </p>
-        <p>
+        <p class="text-article">
             For those chess players that play against the 1.e4 opening quite often, the Sicilian Defense is an opening that you should spend quite a bit of time studying. There are many variations and they each are designed for specific types of players.
         </p>
-
         <h2>Key Concepts</h2>
         <ul>
             <li><strong>Counterplay:</strong> The Sicilian Defense offers Black plenty of counterplay opportunities. Black should aim to challenge White's central pawn structure and generate active play on both wings.</li>
@@ -55,7 +52,7 @@
             <li><strong>Piece activity:</strong> In the Sicilian Defense, piece activity is crucial. Black should aim to develop their pieces harmoniously and control key squares in the center and on the wings.</li>
         </ul>
 
-        <h2>Main Variations  <span class="badge text-bg-info rounded-pill">New</span></h2>
+        <h2>Main Variations <span class="badge text-bg-info rounded-pill">New</span></h2>
 
         <div class="accordion" id="sicilianaVariacions">
             <div class="accordion-item">
@@ -119,9 +116,9 @@
               </div>
             </div>
             <hr>
-            <p>Sicilian main picture from <a href="https://www.thechesswebsite.com/sicilian-defense/#:~:text=The%20Sicilian%20Defense%20is%20the%20most%20popular%20defense,how%20well%20the%20Sicilian%20Defense%20plays%20against%201.e4">here</a></p>
-            <p>The text on this page has been obtained from <a href="https://chessify.me/blog/sicilian-defense-chess-opening#:~:text=Some%20of%20the%20most%20popular%20Sicilian%20Defense%20variations,to%20support%20the%20advance%20d2-d4.%20...%20M%C3%A1s%20elementos">this website</a></p>
-            <p>Open Sicilian variation picture from <a href="https://i.redd.it/jqfrds1mhcfz.png">here</a></p>
+            <p class="fonts">Sicilian main picture from <a href="https://www.thechesswebsite.com/sicilian-defense/#:~:text=The%20Sicilian%20Defense%20is%20the%20most%20popular%20defense,how%20well%20the%20Sicilian%20Defense%20plays%20against%201.e4">here</a></p>
+            <p class="fonts">The text on this page has been obtained from <a href="https://chessify.me/blog/sicilian-defense-chess-opening#:~:text=Some%20of%20the%20most%20popular%20Sicilian%20Defense%20variations,to%20support%20the%20advance%20d2-d4.%20...%20M%C3%A1s%20elementos">this website</a></p>
+            <p class="fonts">Open Sicilian variation picture from <a href="https://i.redd.it/jqfrds1mhcfz.png">here</a></p>
         </div>
     <include src="./views/footer.html"></include>
     <script type="module" src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
