afegida alternativa a grid

--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,12 @@
       <p class="poster__premi">
         10k€ en premis
       </p>
-      <p class="poster__presentacio">
-        El torneig més esperat de l'any ja ha arribat. Jugadors, prepareu-vos per les batalles més explosives.
-      </p>
+
     </div>
+
+    <p class="container text-center">
+      El torneig més esperat de l'any ja ha arribat. Jugadors, prepareu-vos per les batalles més explosives.
+    </p>
 
     <include src="./views/footer.html"></include>
     <script type="module" src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
