petit error al formulari

--- a/src/apuntat.html
+++ b/src/apuntat.html
@@ -15,7 +15,7 @@
         <form class="formulari">
             <div class="form-group">
                 <label for="nomParticipant">Nom</label>
-                <input type="email" class="form-control" id="nomParticipant" placeholder="">
+                <input type="text" class="form-control" id="nomParticipant" placeholder="">
               </div>
             <div class="form-group">
               <label for="emailParticipant">Email</label>
